--- a/libs/movie/src/lib/movie/form/main/main.component.html
+++ b/libs/movie/src/lib/movie/form/main/main.component.html
@@ -105,6 +105,7 @@
           (newSubscription)="shell.addSubToStack($event)"
           listenToChanges
           pushSubToStack
+          test-id="poster-upload"
         >
           <h3 title>Film Poster</h3>
         </image-uploader>
@@ -125,6 +126,7 @@
           (newSubscription)="shell.addSubToStack($event)"
           listenToChanges
           pushSubToStack
+          test-id="banner-upload"
         >
           <h3 title>Film Banner Image</h3>
         </image-uploader>
