--- a/libs/movie/src/lib/movie/form/media-files/media-files.component.html
+++ b/libs/movie/src/lib/movie/form/media-files/media-files.component.html
@@ -12,6 +12,7 @@
         (newSubscription)="shell.addSubToStack($event)"
         listenToChanges
         pushSubToStack
+        test-id="presentation-deck-upload"
       >
         <h3 title>Upload Presentation Deck</h3>
       </file-uploader>
@@ -29,6 +30,7 @@
         (newSubscription)="shell.addSubToStack($event)"
         listenToChanges
         pushSubToStack
+        test-id="scenario-upload"
       >
         <h3 title>Upload Scenario</h3>
       </file-uploader>
@@ -46,6 +48,7 @@
         (newSubscription)="shell.addSubToStack($event)"
         listenToChanges
         pushSubToStack
+        test-id="moodboard-upload"
       >
         <h3 title>Upload Moodboard / Artistic Deck</h3>
       </file-uploader>
