--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -1,4 +1,4 @@
-﻿<list-page [items]="movies$ | async">
+﻿<list-page [isLoading]="isLoading" [items]="movies$ | async">
 
   <!-- App Bar Search -->
   <list-page-app-bar>
