--- a/libs/ui/src/lib/list/page/list-page.component.html
+++ b/libs/ui/src/lib/list/page/list-page.component.html
@@ -39,7 +39,7 @@
 
 <!-- Items -->
 <section>
-  <ng-container *ngIf="!!items; else loading">
+  <ng-container *ngIf="!!items && !isLoading; else loading">
     <ng-container *ngIf="items.length; else empty">
       <div class="export-section">
         <ng-content select="list-page-description"></ng-content>
@@ -69,7 +69,7 @@
   </ng-container>
 
   <!-- PROGRESS -->
-  <ng-content select="list-page-progress"></ng-content>
+  <ng-content *ngIf="!isLoading" select="list-page-progress"></ng-content>
 
   <!-- LOADING -->
   <ng-template #loading>
