reset & modify password tests functional

--- a/libs/user/src/lib/auth/forms/password/change-password.component.html
+++ b/libs/user/src/lib/auth/forms/password/change-password.component.html
@@ -16,19 +16,19 @@
         [errorStateMatcher]="currentPasswordMatch"
         placeholder="New Password"
         label="New Password"
-        test-id="password"
+        test-id="new-password"
       >
         <mat-hint>Between 6 and 24 characters.</mat-hint>
-        <mat-error *ngIf="form.get('next').hasError('required')">
+        <mat-error *ngIf="form.get('next').hasError('required')" test-id="required-error">
           New password is <b>required</b>.
         </mat-error>
-        <mat-error *ngIf="form.get('next').hasError('minlength')">
+        <mat-error *ngIf="form.get('next').hasError('minlength')" test-id="min-error">
           New password with less than <b>6</b> characters.
         </mat-error>
-        <mat-error *ngIf="form.get('next').hasError('maxlength')">
+        <mat-error *ngIf="form.get('next').hasError('maxlength')" test-id="max-error">
           New password with more than <b>24</b> characters.
         </mat-error>
-        <mat-error *ngIf="form.hasError('currentPasswordMatch')">
+        <mat-error *ngIf="form.hasError('currentPasswordMatch')" test-id="current-error">
           Your new password has to be <b>different</b> than current password.
         </mat-error>
       </password-input>
@@ -40,10 +40,10 @@
         test-id="password-confirm"
       >
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
-        <mat-error *ngIf="form.get('confirm').hasError('required')">
+        <mat-error *ngIf="form.get('confirm').hasError('required')" test-id="confirm-required-error">
           New password confirmation is <b>required</b>.
         </mat-error>
-        <mat-error *ngIf="form.hasError('passwordsNotMatching')">
+        <mat-error *ngIf="form.hasError('passwordsNotMatching')" test-id="unmatch-error">
           The confirmation password does not <b>match your password</b>.
         </mat-error>
       </password-input>
