--- a/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
+++ b/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
@@ -24,7 +24,7 @@
           Password is <strong>required</strong>.
         </mat-error>
       </password-input>
-      <a type="button" mat-button routerLink="../reset-password" class="forgot-password">Forgot your password?</a>
+      <a type="button" mat-button routerLink="../reset-password" class="forgot-password" test-id="reset-password">Forgot your password?</a>
       <div fxLayout="column" fxLayoutAlign="center center">
         <button class="submit" type="submit" mat-flat-button color="accent" test-id="submit"><ng-content select="[buttonText]"></ng-content></button>
         <a id="tosignup" type="button" color="accent" mat-button routerLink="/auth/identity">
