--- a/libs/user/src/lib/auth/pages/reset-password/reset-password.component.html
+++ b/libs/user/src/lib/auth/pages/reset-password/reset-password.component.html
@@ -14,7 +14,9 @@
         type="email"
         placeholder="Email Address"
         formControlName="email"
-        required />
+        required
+        test-id="email"
+      />
       <mat-error *ngIf="emailForm.get('email').hasError('email') && !emailForm.get('email').hasError('required')">
         Please enter a <strong>valid</strong> Email Address.
       </mat-error>
@@ -23,7 +25,7 @@
       </mat-error>
     </mat-form-field>
     <div fxLayout="column" fxLayoutAlign="center center">
-      <button [disabled]="submitted" type="submit" mat-flat-button color="accent" (click)="resetPassword()">Reset Password</button>
+      <button [disabled]="submitted" type="submit" mat-flat-button color="accent" (click)="resetPassword()" test-id="reset">Reset Password</button>
       <a mat-button color="primary" routerLink="../connexion">Come back</a>
     </div>
   </form>
