E2E festival : search sale org in marketplace + search buyer org in dashboard

--- a/apps/festival/festival/src/app/dashboard/dashboard.component.html
+++ b/apps/festival/festival/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
         <mat-icon matListIcon svgIcon="document"></mat-icon>
         <span matLine><b>My Files</b></span>
       </a>
-      <a mat-list-item routerLink="organization" routerLinkActive="active">
+      <a mat-list-item routerLink="organization" routerLinkActive="active" test-id="organization">
         <mat-icon matListIcon svgIcon="sellers"></mat-icon>
         <span matLine><b>Buyer List</b></span>
       </a>
