--- a/libs/user/src/lib/auth/components/widget/widget.component.html
+++ b/libs/user/src/lib/auth/components/widget/widget.component.html
@@ -18,7 +18,7 @@
               <mat-icon matListIcon svgIcon="account_circle"></mat-icon>
               <span matLine>Profile</span>
             </a>
-            <a mat-list-item [routerLink]="['/c/o/organization', organization.id]" test-id="organization">
+            <a mat-list-item [routerLink]="['/c/o/organization', organization.id]" test-id="widget-organization">
               <mat-icon matListIcon svgIcon="business"></mat-icon>
               <span matLine>Organization</span>
             </a>
