--- a/libs/contract/src/lib/term/components/form/form.component.html
+++ b/libs/contract/src/lib/term/components/form/form.component.html
@@ -32,7 +32,7 @@
     </ng-template>
     <!-- Local Form -->
     <ng-template formView let-termForm>
-      <form [availsFilter]="termForm" class="surface" vertical required></form>
+      <form [availsFilter]="setValidators(termForm)" class="surface" vertical required></form>
       <languages-form class="surface" [form]="termForm.get('languages')"></languages-form>
     </ng-template>
     <ng-template saveButtonText>Validate</ng-template>
