--- a/apps/crm/crm/src/app/crm/pages/offers/list/offer-list.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/offers/list/offer-list.component.scss
@@ -1,13 +1,16 @@
 :host {
   padding-top: 24px;
-  display: block;
+  flex-direction: column;
+  display: flex;
 }
 
 mat-spinner {
   margin: auto;
 }
 
-button {
-  margin: auto;
-  display: block;
+article {
+  margin-bottom: 24px;
+  display: flex;
+  gap: 16px;
+  justify-content: center;
 }
